--- a/contact.html
+++ b/contact.html
@@ -47,15 +47,15 @@
                                     <a class="nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="about.html">About</a>
+                                    <a class="nav-link" href="about.html">About Us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="service.html">Services</a>
+                                    <a class="nav-link" href="service.html">Our works</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="project.html">Portfolio</a>
+                                    <a class="nav-link" href="project.html">Products</a>
                                 </li>
-                                <li class="nav-item">
+                                <!-- <li class="nav-item">
                                     <a class="nav-link" href="blog.html">Blog</a>
                                 </li>
                                 <li class="nav-item dropdown">
@@ -66,9 +66,9 @@
                                         <a class="dropdown-item" href="single-blog.html">Single blog</a>
                                         <a class="dropdown-item" href="elements.html">Elements</a>
                                     </div>
-                                </li>
+                                </li> -->
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact</a>
+                                    <a class="nav-link" href="contact.html">Contact Us</a>
                                 </li>
                             </ul>
                         </div>
@@ -196,7 +196,7 @@
         <div class="row justify-content-between">
             <div class="col-sm-6 col-md-6 col-xl-3">
                 <div class="single-footer-widget footer_1">
-                    <a href="index.html"> <img src="img/footer_logo.png" alt=""> </a>
+                    <a href="index.html"> <img src="img/logoUniversalTiles.png" alt=""> </a>
                     <p>But when shot real her. Chamber her one visite removal six
                         sending himself boys scot exquisite existend an </p>
                     <p>But when shot real her hamber her </p>
@@ -232,27 +232,27 @@
                     <h4>Instagram</h4>
                     <div class="footer_img">
                         <div class="single_footer_img">
-                            <img src="img/footer_img/footer_img_1.png" alt="">
+                            <img src="img/footer_img/t4.jpeg" alt="">
                             <a href="#"><i class="ti-instagram"></i></a>
                         </div>
                         <div class="single_footer_img">
-                            <img src="img/footer_img/footer_img_2.png" alt="">
+                            <img src="img/footer_img/t5.jpeg" alt="">
                             <a href="#"><i class="ti-instagram"></i></a>
                         </div>
                         <div class="single_footer_img">
-                            <img src="img/footer_img/footer_img_3.png" alt="">
+                            <img src="img/footer_img/t6.jpeg" alt="">
                             <a href="#"><i class="ti-instagram"></i></a>
                         </div>
                         <div class="single_footer_img">
-                            <img src="img/footer_img/footer_img_4.png" alt="">
+                            <img src="img/footer_img/t7.jpeg" alt="">
                             <a href="#"><i class="ti-instagram"></i></a>
                         </div>
                         <div class="single_footer_img">
-                            <img src="img/footer_img/footer_img_5.png" alt="">
+                            <img src="img/footer_img/t8.jpeg" alt="">
                             <a href="#"><i class="ti-instagram"></i></a>
                         </div>
                         <div class="single_footer_img">
-                            <img src="img/footer_img/footer_img_6.png" alt="">
+                            <img src="img/footer_img/t9.jpeg" alt="">
                             <a href="#"><i class="ti-instagram"></i></a>
                         </div>
                     </div>
