--- a/service.html
+++ b/service.html
@@ -33,13 +33,12 @@
             <div class="row align-items-center">
                 <div class="col-lg-12">
                     <nav class="navbar navbar-expand-lg navbar-light">
-                        <a class="navbar-brand" href="index.html"> <img src="img/logoUniversalTiles.png" alt="logo"> </a>
+                        <a class="navbar-brand" href="index.html"><img src="img/logoUniversalTiles.png" alt="logo"></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
-
                         <div class="collapse navbar-collapse main-menu-item justify-content-end"
                             id="navbarSupportedContent">
                             <ul class="navbar-nav">
@@ -47,15 +46,15 @@
                                     <a class="nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="about.html">About</a>
+                                    <a class="nav-link" href="about.html">About Us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="service.html">Services</a>
+                                    <a class="nav-link" href="service.html">Our works</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="project.html">Portfolio</a>
+                                    <a class="nav-link" href="project.html">Products</a>
                                 </li>
-                                <li class="nav-item">
+                                <!-- <li class="nav-item">
                                     <a class="nav-link" href="blog.html">Blog</a>
                                 </li>
                                 <li class="nav-item dropdown">
@@ -66,9 +65,9 @@
                                         <a class="dropdown-item" href="single-blog.html">Single blog</a>
                                         <a class="dropdown-item" href="elements.html">Elements</a>
                                     </div>
-                                </li>
+                                </li> -->
                                 <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact</a>
+                                    <a class="nav-link" href="contact.html">Contact Us</a>
                                 </li>
                             </ul>
                         </div>
@@ -417,7 +416,7 @@
             <div class="row justify-content-between">
                 <div class="col-sm-6 col-md-6 col-xl-3">
                     <div class="single-footer-widget footer_1">
-                        <a href="index.html"> <img src="img/footer_logo.png" alt=""> </a>
+                        <a href="index.html"> <img src="img/logoUniversalTiles.png" alt=""> </a>
                         <p>But when shot real her. Chamber her one visite removal six
                             sending himself boys scot exquisite existend an </p>
                         <p>But when shot real her hamber her </p>
@@ -453,27 +452,27 @@
                         <h4>Instagram</h4>
                         <div class="footer_img">
                             <div class="single_footer_img">
-                                <img src="img/footer_img/footer_img_1.png" alt="">
+                                <img src="img/footer_img/t4.jpeg" alt="">
                                 <a href="#"><i class="ti-instagram"></i></a>
                             </div>
                             <div class="single_footer_img">
-                                <img src="img/footer_img/footer_img_2.png" alt="">
+                                <img src="img/footer_img/t5.jpeg" alt="">
                                 <a href="#"><i class="ti-instagram"></i></a>
                             </div>
                             <div class="single_footer_img">
-                                <img src="img/footer_img/footer_img_3.png" alt="">
+                                <img src="img/footer_img/t6.jpeg" alt="">
                                 <a href="#"><i class="ti-instagram"></i></a>
                             </div>
                             <div class="single_footer_img">
-                                <img src="img/footer_img/footer_img_4.png" alt="">
+                                <img src="img/footer_img/t7.jpeg" alt="">
                                 <a href="#"><i class="ti-instagram"></i></a>
                             </div>
                             <div class="single_footer_img">
-                                <img src="img/footer_img/footer_img_5.png" alt="">
+                                <img src="img/footer_img/t8.jpeg" alt="">
                                 <a href="#"><i class="ti-instagram"></i></a>
                             </div>
                             <div class="single_footer_img">
-                                <img src="img/footer_img/footer_img_6.png" alt="">
+                                <img src="img/footer_img/t9.jpeg" alt="">
                                 <a href="#"><i class="ti-instagram"></i></a>
                             </div>
                         </div>
