Updated the required changes a requested by the client

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Kanox</title>
+    <title>Universal parking tiles &amp; pavers</title>
     <link rel="icon" href="img/favicon.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -115,8 +115,15 @@
                             hero of your story</h2>
                         <h4>He hath his earth firmament air very itself light day moring morning you living saying good
                             above fourth</h4>
-                        <p>Meat abundantly life made fly years there whose beginning crea unto beast sixth herb
-                            their bring. Evening fruitful god you spir evning itself land you of of own brought </p>
+                        <p>
+                            <strong>Universal parking tiles &amp; pavers</strong> was established in the year 1991. At our initiation, we were a small team of less than 20 people. Our core team members played multiple roles to carry forward the tasks of understanding the customer requirements, Industry standards, market challenges, technicalities, etc. We started our journey with the manufacturing of mosaic tiles. We were able to cater to the customer(s) needs because of a quality product and worked on numerous residential and commercial projects. Thus creating a recognition for ourselves in terms of service and quality. At the same time, Standard tiles also ventured into the manufacturing of economy paver blocks under the tutelage of our chairman. Soon we grew into a small scale industry, serving to the customer(s) needs not only in the twin cities of Hyderabad and Secunderabad but also in the neighboring districts and have also executed many projects in major cities/ towns of Andhra and Telangana. Standard tiles also had the unique opportunity to work on some projects outside of AP & Telangana.
+
+We currently have established manufacturing units at Hyderabad, Vijayawada & Ongole. We also have a well spread network of dealers who help us reach out to customers and provide our valuable services to the masses. Standard tiles has been able to partner with outstanding clients, companies & organizations to work on prestigious projects. This wouldn't have been possible with our strong commitment, technical expertise and state of the art infrastructure. We progressed with the knowledge and experience gained over many years, our product line expanded as we entered into the manufacturing of designer flooring tiles, wall tiles, heavy duty paver blocks, AAC bricks, road dividers. Our current production capacity of 2 lakh sq.ft per month makes us one of the leading manufacturers in the area of designer flooring tiles, heavy duty paver blocks.
+
+Our tiles and blocks ranging in aesthetic designs and expert craftsmanship readily break conventions, blazing bold, unique paths that bring together innovative movements in color, form and design. Tiles that are curved, squared, rectangle, rigged and champed into innovative designs to meet the client's requirement in 46 modules and 12 unique colors by utilizing the rich composition of high grade pigments and other quality raw materials. In built anti skid properties further strengthen our tiles.
+
+QUALITY, RELIABILITY AND COMMITMENT TO OUR CUSTOMERS ARE THE HALLMARK OF OUR JOURNEY.
+                        </p>
                         <a href="#" class="btn_1">learn more <i class="ti-angle-right"></i> </a>
                     </div>
                 </div>
