--- a/service.html
+++ b/service.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Kanox</title>
+    <title>Universal parking tiles &amp; pavers</title>
     <link rel="icon" href="img/favicon.png">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -120,7 +120,7 @@
                     <div class="single_service_part">
                         <div class="single_service_part_iner">
                             <span class="ti-mobile"></span>
-                            <h3>Responsive Design</h3>
+                            <h3>Innovative Design</h3>
                             <p>Creeping for female light yea that lesser cand evening
                                 heaven isn't bearing tree appear </p>
                         </div>
@@ -140,7 +140,7 @@
                     <div class="single_service_part">
                         <div class="single_service_part_iner">
                             <span class="ti-lock"></span>
-                            <h3>Better Securty</h3>
+                            <h3>Customer satisfaction</h3>
                             <p>Creeping for female light yea that lesser cand evening
                                 heaven isn't bearing tree appear </p>
 
